# QuickFit

./: .gitignore  CMakeLists.txt  Makefile  README.md  makef  setu.sh  setup.sh
inc/: PlotFormat.hh  QuickFit.hh  QuickFit_LinkDef.h  currentPath.hh
src/: PlotFormat.cc  QuickFit.cc
test/: f.root  plot_test.cxx  pull.cxx  pull_root5.cxx  pull_root6.cxx
